bkmonitor/webpack/src/monitor-pc/pages/custom-escalation/custom-escalation-detail/metric-table-slide.scss
.metric-slider-box {
  .metric-slider-content {
    padding: 22px 24px;

    .slider-search {
      margin-bottom: 16px;
    }

    .slider-table {
      max-height: calc(90vh - 120px);
      margin-bottom: 32px;
      overflow: scroll;

      .metric-func-selector {
        margin-top: 2px;
        .func-label {
          display: none;
        }
        .function-menu-anchor,
        .func-item {
          margin-top: 1px;
        }
        .init-add-input {
          width: 176px;
          border: none;
        }
      }

      td {
        height: 40px;
      }

      .cell {
        color: #4d4f56;

        &:has(.slider-input, .bk-tag-selector) {
          padding: 0;

          &:hover {
            cursor: pointer;
            border: 1px solid #a3c5fd;
            &:has(input:focus) {
              border: none;
            }
          }

          &:has(.disabled) {
            &:hover {
              border: none;
            }

            .bk-tag-input {
              background-color: transparent;
            }
          }
        }

        &:has(.is-error) {
          border: 1px solid #ff5656;
          &:has(input:focus) {
            border: none;
          }
          &:hover {
            border: 1px solid #ff5656;
          }
        }

        &:has(.slider-select) {
          padding: 0;

          .bk-select {
            line-height: 37px;
            border: none;

            .bk-icon {
              top: 8px;
              color: #4d4f56;
            }

            .bk-select-name {
              height: 37px;
            }

            &.is-focus {
              border: 1px solid #3a84ff;

              &:hover {
                border: 1px solid #3a84ff;
              }
            }

            &:hover {
              border: 1px solid #a3c5fd;
            }
          }
        }

        &:has(.function-menu) {
          height: 39px;
          line-height: 39px;

          &:has(.tippy-active) {
            border: 1px solid #3a84ff;

            &:hover {
              border: 1px solid #3a84ff;
            }
          }

          &:hover {
            border: 1px solid #a3c5fd;
          }
        }

        .operations {
          .bk-icon {
            margin-right: 10px;
            font-size: 14px;
            color: #979ba5;

            &:hover {
              cursor: pointer;
            }
          }
        }

        .slider-input {
          &:has(input:focus) {
            box-sizing: border-box;
            border: 1px solid #3a84ff;
          }
          input {
            width: 100%;
            height: 37px;
            border: none;
          }
        }

        .dimension-input {
          width: 100%;
          text-wrap: nowrap;

          &:has(.active) {
            position: absolute;
            right: 0;
            bottom: 3px;
            left: 0;
            z-index: 9999;
            height: auto;
            min-height: 37px;
          }

          .bk-tag-selector {
            .bk-tag-input {
              padding: 0;
              border: 1px solid transparent;

              .tag-list {
                width: 100%;
                max-height: 10000px;
                padding: 0 4px;
                border: none;
              }

              &.active {
                .tag-list {
                  height: auto;
                  min-height: 32px;
                  margin-top: 4px;
                  border: 1px solid #3a84ff;
                }
              }
            }
          }
        }
      }

      .empty-slider-table {
        font-family: MicrosoftYaHei;

        .empty-tip {
          margin-top: 8px;
          font-size: 12px;
          color: #979ba5;
        }

        .empty-img {
          width: 220px;
          height: 100px;
          margin: 16px auto 8px;

          img {
            width: 100%;
            height: 100%;
          }
        }

        .empty-text {
          margin-bottom: 4px;
          font-size: 12px;
          line-height: 22px;
          color: #979ba5;
          text-align: center;
        }

        .add-row {
          margin-top: 30px;
          font-size: 12px;
          line-height: 20px;
          color: #3a84ff;
          text-align: center;

          &:hover {
            cursor: pointer;
          }
        }
      }
    }

    .slider-footer {
      position: sticky;
      top: 0;
      bottom: 0;

      button {
        width: 88px;
        margin-right: 8px;
      }
    }
  }
}

.name-editor {
  position: relative;

  .bk-form-control {
    width: 100%;
  }

  .is-error {
    border-color: #ff5656;
  }

  .error-text {
    position: absolute;
    padding-top: 4px;
    font-size: 12px;
    line-height: 1;
    color: #ff5656;
  }
}

